--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,4 +13,5 @@ body,
 
 body {
   -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
